# Lambix-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Lambix/: CMakeLists.txt
Lambix/src/: Lambix.h  lbpch.h
Lambix/src/Lambix/: Application.cpp  Application.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.h  OrthoCameraController.cpp  OrthoCameraController.h  Window.h  core.h
Lambix/src/Lambix/Core/: Application.cpp  Application.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  Window.h
Lambix/src/Lambix/Debug/: Timer.h
Lambix/src/Lambix/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Lambix/src/Lambix/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Lambix/src/Lambix/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthoCamera.cpp  OrthoCamera.h  OrthoCameraController.cpp  OrthoCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Lambix/src/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Lambix/src/platform/windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: FlatColor.glsl  Texture2D.glsl
Sandbox/src/: GameControl.cpp  GameControl.h  GameLayer.cpp  GameLayer.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
